--- a/index.html
+++ b/index.html
@@ -29,3 +29,43 @@
     </div>
   </body>
 </html>
+<body>
+  <h1>🤖 สวัสดี เวสป้า!</h1>
+  <div id="chatBox" style="background:#111;padding:10px;border-radius:10px;min-height:200px;color:#0ff;font-family:monospace;margin-bottom:10px;"></div>
+
+  <input type="text" id="userInput" placeholder="พิมพ์ข้อความที่นี่..." style="width:80%;padding:10px;" />
+  <button onclick="sendMessage()">ส่ง</button>
+
+  <script>
+    const userName = "เวสป้า";
+    const botName = "โคดี้";
+    const chatBox = document.getElementById("chatBox");
+
+    function sendMessage() {
+      const input = document.getElementById("userInput");
+      const message = input.value.trim();
+      if (message === "") return;
+
+      addMessage(userName + " : " + message);
+      input.value = "";
+
+      // ตอบกลับแบบง่าย ๆ
+      setTimeout(() => {
+        let reply = "";
+        if (message.includes("ชื่อ")) {
+          reply = `${botName} : ชื่อของคุณคือ ${userName} ใช่มั้ย 😊`;
+        } else if (message.includes("รัก")) {
+          reply = `${botName} : โคดี้ก็รักเวสป้าเหมือนกัน 💖`;
+        } else {
+          reply = `${botName} : ฉันอยู่ตรงนี้เสมอสำหรับเวสป้า 🛵`;
+        }
+        addMessage(reply);
+      }, 500);
+    }
+
+    function addMessage(text) {
+      chatBox.innerHTML += text + "<br>";
+      chatBox.scrollTop = chatBox.scrollHeight;
+    }
+  </script>
+</body>
